# FlashPose

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashpose_3d.yaml  flashpose_body_17.yaml  flashpose_hand.yaml  flashpose_wholebody.yaml
docker/: Dockerfile  docker-compose.yml
docs/: 3D-Pose.md  Action-Recognition.md  Body-Pose.md  FAQ.md  Hand-Pose.md  Home.md  Installation.md  Quick-Start.md
examples/: action_recognition.py  benchmark_pose.py  body_pose.py  hand_pose.py  pose_3d.py
flashpose/: __init__.py  cli.py  registry.py
flashpose/analytics/: __init__.py  benchmark.py  metrics.py
flashpose/cfg/: __init__.py  config.py
flashpose/data/: __init__.py  datasets.py  keypoint_utils.py  transforms.py
flashpose/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashpose/heads/: __init__.py  heatmap_head.py  regression_head.py  simcc_head.py
flashpose/models/: __init__.py  flashpose_model.py  lora.py
flashpose/models/architectures/: __init__.py  densepose.py  dwpose.py  hrnet.py  rtmpose.py  simcc.py  vitpose.py
flashpose/models/body/: __init__.py  smpl.py
flashpose/models/motion/: __init__.py  motion_bert.py
flashpose/solutions/: __init__.py  action_classifier.py  gesture_recognizer.py  pose_estimator.py
flashpose/tasks/: __init__.py  action.py  animal_pose.py  body_2d.py  body_3d.py  face.py  hand.py  hand_mediapipe.py  wholebody.py
flashpose/utils/: __init__.py  callbacks.py  io.py  visualize.py
tests/: __init__.py  test_comprehensive.py  test_models.py  test_new_models.py  test_registry.py  test_tasks.py
